[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.3.0"
rust-version = "1.78.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/urholaukkarinen/transform-gizmo"
repository = "https://github.com/urholaukkarinen/transform-gizmo"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]

[workspace.dependencies]
transform-gizmo = { version = "0.3.0", path = "crates/transform-gizmo" }
transform-gizmo-egui = { version = "0.3.0", path = "crates/transform-gizmo-egui" }

egui = "0.33"
eframe = "0.33"
emath = "0.33"
epaint = "0.33"
ecolor = "0.33"
glam = { version = "0.30", features = ["mint"] }
mint = "0.5"
enum_dispatch = "0.3.12"
ahash = "0.8"
enumset = "1.1"
bytemuck = "1.24"
uuid = "1.16"
[profile.release]
opt-level = "s"
panic = "abort"
